--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "homepage": "https://github.com/Slowyn/react-native-underline-tabbar#readme",
   "peerDependencies": {
     "react-native": ">=0.20.0",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "^1.6.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
